--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-DOCTYPE html!
 <html>
   <head>
     <title>
-      
+      Serenity Discord Server
     </title>
+    <style>
+      titlecentertop{
+        position: center;
+        color: dark-grey;
+      }
+    </style>
   </head>
   <body>
-    <p>
-      TEST TEXT
-    </p>
+    <h1 class="titlecentertop">
+      Serenity Discord Server Offical
+    </h1>
   </body>
 </html>
